added label to the top and a button

--- a/RestaurantChapeau/KitchenViewForm.resx
+++ b/RestaurantChapeau/KitchenViewForm.resx
@@ -60,38 +60,38 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="button3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAApEAAAKRAcAerV4AAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAAFhUlEQVR4Xt2bW2wUVRjH11tMjMZr1Bhf1EcToymR0N2aVStldmnTpS1hH/BCIq9GY4yYUhaDD0JE
-        QhQ1kWgC5QEjWHZ3um1NSAuxF0q5lLKFVKDxRdQiiiZqpOP3nz1bt6dfd2dndm77Jb/s7pzb9//mcs6c
-        czZgty1VlYdD6Ug8pCpbgmpkfzAdOUVcJK4Q/xL/iO8XalXleG06si+YinbQZ0ttz/L7RTU+Mi1wAwmo
-        C6Wiu0jUOUKzwCwxTgH8gD6XiBa8aU8fiN0bVJWN5Oj3wnk7mKDgvhnsarpDNOu+Le1qeoCEbyPHrjEO
-        28UVuioSdJXdLdxwwRKJG8mB9eTMb5JzTjJDgXgNvgivnLG67hVPUOMnJGfc5Cg9QB8T7tlr9DR/kRr8
-        U3LAC/xem4quEW5W3sKHwzdTA7uZhj0FeoyK3xKKqtxKlX8tN+ZhOmtGa24R7luzmmTjbVRhv9SA56Er
-        IWU5CG37226iLu4A14AfwKjS0u1AlXwuV+o7aIwi5JRn1K28ylboQ+h2iAtZxiyYaXicCnqxqzMFBeAq
-        DdoeFfKKG7o7KnRSrqQKGMCLmpC5uGFoyRSuDlLRl4RM3sLpyIOU0c2xvd1cDh9svkvIXWgYRTGFqotU
-        tEPInW/LMg33OPxKWzYvZNq0L0/3ait717LpBplh5xMQGSazZ6jPtGrJ7EntzPQfWv/URa2p72U2nxFo
-        gPSGkC0M01j2zuRYolB8noGpS1pz3ytsfgNMCOU5o7Nfx2TyBJz4PEcoCLG+dWy5UixTlaeEfHr45SYw
-        2YxuUkx8niNT01rsWxNBKBwi0z1xns3kInjgqZOnWdGFjE9f0976bhtbRwlO6OLpifgQk+gqRs48gPj2
-        wZ1sHQaYDScb70PfH2cSXcMh8TlS0VWY49vCJrqAo+KBqmwMiOUqPoODOC4epKJ7MelRkent5ZnV2s6x
-        r7Rnu2NsejHKeeC9M7SDrcMkI3gG/MAklAUEpCdP6U4ePDuqPde9is3H4cqZ/58LuAKwMsslGqKhZ43W
-        c25inrPfZEe15w0EwWXx4GcEAMvTXGJJVmTiJP4s63RX9njRIHhAPPgLAfhbOmgIpSeu9Z7Psk7nQRDq
-        u1sWlPWIeKAHYEY6aAg4xjktcyg7RkFonSvn4gOPQ78FLkkHDfPuyGes8zLq5LjeS3jozOfRH4Kj0sGy
-        eG9kNytCBr2Eh858nhG8CO1jEspi8/CnrJhycfDM59mDAGxiEsomMfwJK8ooLojHekE7AtDCJZohMWQu
-        CG6IB6HkylgAW9HoB3ZjsZnKJTG8ixW5GG6JJ67rr8P6nEA6Mi4lWmLT8MesWBkXxYMxXTyMfmyXEi3T
-        MfSRLpATDlwWD7YK+XoAlkiJFWHD4A42CB4Qj6nxJ4X8nNHBit4GeTYMfjgvCF4QT8yfFocFsQOTz2yZ
-        twe368I9Ip5ZGCHDchElWno1LgZGdw6O8IrBL43BgqqymSlQXWAecDHD3lvK9NOCQtXDjzV99XcKubyF
-        VGUdU7AqoKHvWiGziOUWSo/KhauAfkNbZGDYeEzRuspU4ld+NbxJKm8UhFamIn+CFSAzRleB77fMkIb3
-        hRwTlnsefCFX6iM6Le8cx4ZjuoTSTOWehkZ7yYrtGPfLfwUK2FMx8XOG2wF/juIb9Aqz+j1vtLszY3Wq
-        0kwN2fbOYAFs8Fwt3LTX0KdSYwMFjbtN/zOHGh8R7jlkdJmJP1Bdlpxxkhk6GettveRLGfbeUi+BTZam
-        lthMoSq/4K2u5IuNk0Y9xe2YaKBgnGGdrgyYtXodbYlmvWnYhCh6DPzv4Lpw3gwoix0sWxfM4fnFMPeO
-        sTh1T+0kpJM4RmBbLm4ZLM0DfMexY5R3L/Ji0WJu3t42CwT+A4mmLJeP5coFAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAC
+        jQAAAo0BUn0y4wAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAWFSURBVHhe3Ztb
+        bBRVGMfXW0yMxmvUGF/URxOjKZHQ3ZpVK2V2adOlLWEf8EIir0ZjjJhSFoMPQkRCFDWRaALlASNYdne6
+        bU1IC7EXSrmUsoVUoPFF1CKKJmqk4/efPVu3p193Z2d2bvslv+zunNv3/+ZyzpxzNmC3LVWVh0PpSDyk
+        KluCamR/MB05RVwkrhD/Ev+I7xdqVeV4bTqyL5iKdtBnS23P8vtFNT4yLXADCagLpaK7SNQ5QrPALDFO
+        AfyAPpeIFrxpTx+I3RtUlY3k6PfCeTuYoOC+GexqukM0674t7Wp6gIRvI8euMQ7bxRW6KhJ0ld0t3HDB
+        EokbyYH15MxvknNOMkOBeA2+CK+csbruFU9Q4yckZ9zkKD1AHxPu2Wv0NH+RGvxTcsAL/F6biq4Rblbe
+        wofDN1MDu5mGPQV6jIrfEoqq3EqVfy035mE6a0ZrbhHuW7OaZONtVGG/1IDnoSshZTkIbfvbbqIu7gDX
+        gB/AqNLS7UCVfC5X6jtojCLklGfUrbzKVuhD6HaIC1nGLJhpeJwKerGrMwUF4CoN2h4V8oobujsqdFKu
+        pAoYwIuakLm4YWjJFK4OUtGXhEzewunIg5TRzbG93VwOH2y+S8hdaBhFMYWqi1S0Q8idb8syDfc4/Epb
+        Ni9k2rQvT/dqK3vXsukGmWHnExAZJrNnqM+0asnsSe3M9B9a/9RFranvZTafEWiA9IaQLQzTWPbO5Fii
+        UHyegalLWnPfK2x+A0wI5Tmjs1/HZPIEnPg8RygIsb51bLlSLFOVp4R8evjlJjDZjG5STHyeI1PTWuxb
+        E0EoHCLTPXGezeQieOCpk6dZ0YWMT1/T3vpuG1tHCU7o4umJ+BCT6CpGzjyA+PbBnWwdBpgNJxvvQ98f
+        ZxJdwyHxOVLRVZjj28ImuoCj4oGqbAyI5So+g4M4Lh6konsx6VGR6e3lmdXazrGvtGe7Y2x6Mcp54L0z
+        tIOtwyQjeAb8wCSUBQSkJ0/pTh48O6o9172Kzcfhypn/nwu4ArAyyyUaoqFnjdZzbmKes99kR7XnDQTB
+        ZfHgZwQAy9NcYklWZOIk/izrdFf2eNEgeEA8+AsB+Fs6aAilJ671ns+yTudBEOq7WxaU9Yh4oAdgRjpo
+        CDjGOS1zKDtGQWidK+fiA49DvwUuSQcN8+7IZ6zzMurkuN5LeOjM59EfgqPSwbJ4b2Q3K0IGvYSHznye
+        EbwI7WMSymLz8KesmHJx8Mzn2YMAbGISyiYx/AkryiguiMd6QTsC0MIlmiExZC4IbogHoeTKWABb0egH
+        dmOxmcolMbyLFbkYboknruuvw/qcQDoyLiVaYtPwx6xYGRfFgzFdPIx+bJcSLdMx9JEukBMOXBYPtgr5
+        egCWSIkVYcPgDjYIHhCPqfEnhfyc0cGK3gZ5Ngx+OC8IXhBPzJ8WhwWxA5PPbJm3B7frwj0inlkYIcNy
+        ESVaejUuBkZ3Do7wisEvjcGCqrKZKVBdYB5wMcPeW8r004JC1cOPNX31dwq5vIVUZR1TsCqgoe9aIbOI
+        5RZKj8qFq4B+Q1tkYNh4TNG6ylTiV341vEkqbxSEVqYif4IVIDNGV4Hvt8yQhveFHBOWex58IVfqIzot
+        7xzHhmO6hNJM5Z6GRnvJiu0Y98t/BQrYUzHxc4bbAX+O4hv0CrP6PW+0uzNjdarSTA3Z9s5gAWzwXC3c
+        tNfQp1JjAwWNu03/M4caHxHuOWR0mYk/UF2WnHGSGToZ62295EsZ9t5SL4FNlqaW2EyhKr/gra7ki42T
+        Rj3F7ZhooGCcYZ2uDJi1eh1tiWa9adiEKHoM/O/gunDeDCiLHSxbF8zh+cUw946xOHVP7SSkkzhGYFsu
+        bhkszQN8x7FjlHcv8mLRYm7e3jYLBP4DiaYsl4/lygUAAAAASUVORK5CYII=
 </value>
   </data>
   <data name="button2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
-        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA7DAAAOwwHHb6hkAAAAB3RJ
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAA6/AAAOvwE4BVMkAAAAB3RJ
         TUUH5gURCR8rQrsh5AAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAABVzSURBVHhe
         3ZoJXFVl+sffTJt/M/Ovps/M1OgY/cf/VFO5ZKXJjmYuCOKaCggIChdkU9HUFnctJfelmUZRS51IDXPc
         QHZwQfbl3st6uSyCJpWAApd7n/k9556rV7wk6aTNPJ/Pt/Oec95zz/P7nXfFhCmu1Fea6AZ6giel8zq+
@@ -189,40 +189,64 @@
   </data>
   <data name="btn_newOrders.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAAboAAAG6AeirAQYAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
-        AAAHU0lEQVR4Xu2bXWwUVRTHkSDyYcAQCrQmBUyxggYKPNSSGLvwgAkJxgcJCSTwYFB5MBBDDCARg6K+
-        IURSAg/6QCSFRhGQ+gFbSKjFzn7MLuvLbmenuwHrAzFRikih13O3ne2Z2X/Ze7c7pkmb8CPtOWdmz+/M
-        zJ2ZUiYIIcY0MDiWgEFONpudlU53NyWTySdQfjSSDqanREOxpkR7YhbKc2DQIRgUk0j+MiGI1nQ6PQXV
-        jSYG5OOtNAARDZmXg8HgJFTnAIMO6bR9dFA+h2V1n0d1owkSPz8gP0AkHD+K6hxgUGLbme1cfpAdqHY0
-        EQmZO/gAckMwzO2oVgKDtm2vtu3uPi5vWZkTqHY0EjXME54h9JkhczWqLQjI65zks1yeuJpIJCbzOjmk
-        0hfG/ROF/VKlSAVWiuCSzeLaojoRbHzktTocsgevnOyVpK+6hmDEsnJ94HUS1zcSy7J3eeTtZPL3Cl5D
-        8g0Uv0dc8A4GIuVSawIk/DmRIh4QIsdp2rXkzBwhzj59X/zwTFS0Ld4pgguKLrjys81w7AIJ3guHYw08
-        Fw6HK2gRtPkQ6PLYxWskrm/o6D9FUrcHxQdJN/Karq6uaor3OHk6W84NOwRj5eMk+Q7xR17YizMAL9/M
-        eyguLWoR56qmoX0PHGXzXF4wHOsxjEQ1r4l0xhv5AKjmdiQSeYrX5L+QkNBBR2wA+yLP9/T0TE+nM1F3
-        TXfGe4bkSAZeJcGuAmEvSJ4jz4rLzx707n/gCMcyLsFQLGqa5nReR7GLvCYSNl37yn9Bp3UlyfQysX7L
-        spbxYu9tkeil7VbwGvrzGMl/CGURSBrxY80V2vdE/lmmYa4gqV63oPu2Fw7fWEbxflbTaxi/VTr5fCHJ
-        HHLLZU46OUkqla0pvDN0b+A1IvH6ZNEVaIaiw4Fkh+Pi/KwIPv8k/0x66NnA5CR9oVCihtfQOnGS10RC
-        8UNOLl/kWfnv05Fd6OQkdPS/ZnlJE8/nSAW+LBAsBhJ9FK0LUt7PJakmLkhrwymep8tiIcXv5/N0R3By
-        ub9ooavjct4nPhrGcor3s5o7tM08XiO6Gt+DgsVAksW4VPM9/+zEr4l5JHYnLyhP+c7ocl5DMfcTYiRR
-        J+O5JN369jE5yTa+MV0OLTxPT4kHeF6kVq8imYcFciogQRWuPPcm74GO6gEuSGdBiysfim1z5Y3YPhnP
-        JUnqOhPsz2QyVc6G9DY4lWJ8cbxNDx8znHyOVOBagZgqSE6F89V/8R46OpIz5G2OSfa2t7dPdfJ016ii
-        2NBiGI5fl3E6+tZcKe0I0lrQ6WwkodN/nZMbzB/neTr6r0ExVZCcKsHaT3kvdAc4nhckIkZ8Hc+boVgn
-        y/fHO+JzpeAmLigvB74RxY6585n1PE8SpR99CRJTxXMWmGFzPROUHON5edrzfCQU20QDyOzhgjQQ6mpo
-        I4rdZPm7t27dGnoys9bMJYnSrn0HJKbDtcUvOP0YhjGNxO4yyZv5XomocSPAcoLeIfbIARxhgnSErVpn
-        g1QqNYfnvE+GItn4BpTSAUnp8HPNV7wnEnM9+dEtkF4yBnJmp1nLc8SRghWenvVnOhtYVnYpz9H1f9jJ
-        5UgFThUI6YKkdGhd2M17otP8MJeMh+JLnRydITN5Tt4p5CneziTv8p3RcNaynGQ3z5PAyK5/CZLSwbsO
-        GPHdbsnoWp6nWP4SoUWxXQ7AZoIWL6YBbGU5yRaeJ4F0gZAuSEqHs1V9vKeIYW4Zks8tdFt5ns4Qayhv
-        2nIArXRttw3iepGgAWxkOSJbz/MkcK9ASBckpYP8OQLriV6Q6unItuUJmxt5Xr4sOTn5w9N8oiSQkC5I
-        ShfUmyIwqAwS0gUJ6YJ6UwQGlUFCuiAhXVBvisCgMkhIFySkC+pNERhUBgnpgoR0Qb0pAoPKICFdkJAu
-        qDdFYFAZJKQLEtIF9aYIDCqDhHRBQrqg3hSBQWWQkC5ISBfUmyIwqAwS0gUJ6YJ6UwQGlUFCuiAhXVBv
-        isCgMleXiBHzSd3IQb0pAoPKoKOhy1uvjBzUmyIwqAwS0gUJ6YJ6UwQGlUFCuiAhXVBvisCgEsnAemHW
-        ixFzYsHICdZ+BHtUAAaLIuVTgX8LVvRSQGeFLvKHIiUOAQYfSTnlJUioFEocAgwOS7nlJUimVEoYAgxC
-        /JCXIJGRoDkEGCzAL3kJkhgpGkOAQRd+ykuQQDlQHAIM5vFbXoKaLxcKQ4DBHP+HvAQ1Xk6KDAEGc3QF
-        LNhwuUFNlxvPvx5xYDBHKmAXNOsHqOFyc7ZyfADQkYDBHOMDGB/A+AAKmvUD1HC5KXEA8tdf2srGjVU3
-        Raz+nwK+pfd5L9/NfyAuVP9ZNjy/RsOBQV9ortgLjw76Cc8H9T/BffgADPpC8+yVJPyw6ADeJj5esRnu
-        wwdg0DdOz/6s6AD2vdgBt/UJGPSN5gmTxZmKIyTeDwfwfoMp9rv/P4DfwKDvtMwOkPwXtC78It59+W+x
-        tyFOp/1OWOszMDiWgMGxg5jwHxnteIx9hc0SAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAB
+        ugAAAboB6KsBBgAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAdTSURBVHhe7Ztd
+        bBRVFMeRIPJhwBAKtCYFTLGCBgo81JIYu/CACQnGBwkJJPBgUHkwEEMMIBGDor4hRFICD/pAJIVGEZD6
+        AVtIqMXOfswu68tuZ6e7AesDMVGKSKHXc7ed7ZnZf9l7tzumSZvwI+05Z2bP78zMnZlSJgghxjQwOJaA
+        QU42m52VTnc3JZPJJ1B+NJIOpqdEQ7GmRHtiFspzYNAhGBSTSP4yIYjWdDo9BdWNJgbk4600ABENmZeD
+        weAkVOcAgw7ptH10UD6HZXWfR3WjCRI/PyA/QCQcP4rqHGBQYtuZ7Vx+kB2odjQRCZk7+AByQzDM7ahW
+        AoO2ba+27e4+Lm9ZmROodjQSNcwTniH0mSFzNaotCMjrnOSzXJ64mkgkJvM6OaTSF8b9E4X9UqVIBVaK
+        4JLN4tqiOhFsfOS1OhyyB6+c7JWkr7qGYMSycn3gdRLXNxLLsnd55O1k8vcKXkPyDRS/R1zwDgYi5VJr
+        AiT8OZEiHhAix2nateTMHCHOPn1f/PBMVLQt3imCC4ouuPKzzXDsAgneC4djDTwXDocraBG0+RDo8tjF
+        aySub+joP0VStwfFB0k38pqurq5qivc4eTpbzg07BGPl4yT5DvFHXtiLMwAv38x7KC4tahHnqqahfQ8c
+        ZfNcXjAc6zGMRDWviXTGG/kAqOZ2JBJ5itfkv5CQ0EFHbAD7Is/39PRMT6czUXdNd8Z7huRIBl4lwa4C
+        YS9IniPPisvPHvTuf+AIxzIuwVAsaprmdF5HsYu8JhI2XfvKf0GndSXJ9DKxfsuylvFi722R6KXtVvAa
+        +vMYyX8IZRFIGvFjzRXa90T+WaZhriCpXreg+7YXDt9YRvF+VtNrGL9VOvl8IckccstlTjo5SSqVrSm8
+        M3Rv4DUi8fpk0RVohqLDgWSH4+L8rAg+/yT/THro2cDkJH2hUKKG19A6cZLXRELxQ04uX+RZ+e/TkV3o
+        5CR09L9meUkTz+dIBb4sECwGEn0UrQtS3s8lqSYuSGvDKZ6ny2Ihxe/n83RHcHK5v2ihq+Ny3ic+GsZy
+        ivezmju0zTxeI7oa34OCxUCSxbhU8z3/7MSviXkkdicvKE/5zuhyXkMx9xNiJFEn47kk3fr2MTnJNr4x
+        XQ4tPE9PiQd4XqRWryKZhwVyKiBBFa489ybvgY7qAS5IZ0GLKx+KbXPljdg+Gc8lSeo6E+zPZDJVzob0
+        NjiVYnxxvE0PHzOcfI5U4FqBmCpIToXz1X/xHjo6kjPkbY5J9ra3t0918nTXqKLY0GIYjl+XcTr61lwp
+        7QjSWtDpbCSh03+dkxvMH+d5OvqvQTFVkJwqwdpPeS90BzieFyQiRnwdz5uhWCfL98c74nOl4CYuKC8H
+        vhHFjrnzmfU8TxKlH30JElPFcxaYYXM9E5Qc43l52vN8JBTbRAPI7OGCNBDqamgjit1k+bu3bt0aejKz
+        1swlidKufQckpsO1xS84/RiGMY3E7jLJm/leiahxI8Bygt4h9sgBHGGCdIStWmeDVCo1h+e8T4Yi2fgG
+        lNIBSenwc81XvCcScz350S2QXjIGcmanWctzxJGCFZ6e9Wc6G1hWdinP0fV/2MnlSAVOFQjpgqR0aF3Y
+        zXui0/wwl4yH4kudHJ0hM3lO3inkKd7OJO/yndFw1rKcZDfPk8DIrn8JktLBuw4Y8d1uyehanqdY/hKh
+        RbFdDsBmghYvpgFsZTnJFp4ngXSBkC5ISoezVX28p4hhbhmSzy10W3mezhBrKG/acgCtdG23DeJ6kaAB
+        bGQ5IlvP8yRwr0BIFySlg/w5AuuJXpDq6ci25QmbG3leviw5OfnD03yiJJCQLkhKF9SbIjCoDBLSBQnp
+        gnpTBAaVQUK6ICFdUG+KwKAySEgXJKQL6k0RGFQGCemChHRBvSkCg8ogIV2QkC6oN0VgUBkkpAsS0gX1
+        pggMKoOEdEFCuqDeFIFBZZCQLkhIF9SbIjCoDBLSBQnpgnpTBAaVQUK6ICFdUG+KwKAyV5eIEfNJ3chB
+        vSkCg8qgo6HLW6+MHNSbIjCoDBLSBQnpgnpTBAaVQUK6ICFdUG+KwKASycB6YdaLEXNiwcgJ1n4Ee1QA
+        Bosi5VOBfwtW9FJAZ4Uu8ociJQ4BBh9JOeUlSKgUShwCDA5LueUlSKZUShgCDEL8kJcgkZGgOQQYLMAv
+        eQmSGCkaQ4BBF37KS5BAOVAcAgzm8VtegpovFwpDgMEc/4e8BDVeTooMAQZzdAUs2HC5QU2XG8+/HnFg
+        MEcqYBc06weo4XJztnJ8ANCRgMEc4wMYH8D4AAqa9QPUcLkpcQDy11/aysaNVTdFrP6fAr6l93kv381/
+        IC5U/1k2PL9Gw4FBX2iu2AuPDvoJzwf1P8F9+AAM+kLz7JUk/LDoAN4mPl6xGe7DB2DQN07P/qzoAPa9
+        2AG39QkY9I3mCZPFmYojJN4PB/B+gyn2u/8/gN/AoO+0zA6Q/Be0Lvwi3n35b7G3IU6n/U5Y6zMwOJaA
+        wbGDmPAfGe14jH2FzRIAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACAAAAAgCAYAAABzenr0AAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAACXBIWXMAAAKRAAACkQHAHq1eAAAAB3RJ
+        TUUH5gURCTcQru1magAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAPOSURBVFhH
+        tZfJT1NRFMZfQv0rSNxD4k5p6UTrAG0pGFeKw1qGGP8Ah7ABgrgxsDAxMQ6QGBONUFooUIZuwRYBrbFB
+        gwlqgq4UIi68ft/te9W2t5OlN/nlDffc8507vvM0Zent1VzhZs0a8Gu2kFdrDHkP2YK+I+AqeALWwDfw
+        S+crWAVjoAfU2wJ+ttFsk62aO3xK+iyp2CFoRSN5HW83wYkd3AWbYB+IIvwESTACLAjARF9Hn5+RfgsW
+        OyJ26AGg8WFwC3wBKqFS+AwGrUFfLa4YSZ+Ge10tq9CAkZpT4lawBFROy+U3mAdmFzTovzE7CCt7DWBE
+        mkECqJxVwgY47oYG1pQcbVlcCy6tcbpFvoABe14NcQMGYeY02KCpCQSA1ZrqecjLOY/qhtUkgs7W2jEV
+        zvH21MJzhrxc7bezDKsF10Q/Ol7DLSoDANxqlaz2HJyhdmENepV1YBviZlyxAIM+Hhjc5yrDsqFoV/Sm
+        uBN7KlpnLuLZo7QDw9juJs4/TzgeMiqjsqB4Z/SGWEy+F6+3dsXDtVnhn7mUbyR4WNUxAB6vpZxwBUn1
+        3BDfkwGQweUHwh70q9rwxOxmADzbVQYlk9nzPbGx9UNeJxIx0RHpUbbRGWMA/LCoKiV07gi1KetSZPY8
+        Jb4rxhMvxdlIN9rnXQMkzgD4VVNVSnFPuEMMrTwWl6PX5HN2PcWXkh8yep4S7yomTnYYAD+nOZV07g2f
+        F/deBaXjxeRmOggD1bCX2HOD/bwBcOEMLN9PDymdM4jO6HVZnzvsZfXcQAbAZEJVKS7MXxGTb1czRBYQ
+        xNDKI3mtUJzIKWAmo6qUzjrme0QgEU+LbWA01re+43m3UnESYwBMo1SVEhkEtlJmECn+ipc859mMMgDm
+        cDwUVAYSOj8HEe7r3J7/t3j6IKoHPBZVRmkowmGm6JuPFI9VIk70ozjg56eYCaTKKANjJEbiz+S0VCBO
+        0h8jYgGf9IqiNOFTq3pfBttIgMxM+WXeb5/y1OBlP2CyoGpwkFCjzzrdUiMDcE60GfkgU+eIblRN5kAt
+        syFqy8Tw2OxJI4gGsK4bVgMmpdTQLMyGmJSyMCVnZux8cZpBuEE1gliHjrsJwkzLZT74b7FOebRG4EAF
+        5oZRcqgOYk3QB6e2wYEOUjzv35HM13UDNOCa6APbQOW4FLizBoD8NcPCkx0tWPhv2DR3QmPejnvuDmav
+        w+AdKHhi6tCGtsPoDH9CTPRlgTje6SrFChaH3B36XGHueFjVgW4wCuJgBzCXJLznO9bRpg5tTfpIag6u
+        dmPBZRRN+wP3qS4i3tfvagAAAABJRU5ErkJggg==
 </value>
   </data>
 </root>
