--- a/RestaurantChapeau/Properties/Resources.resx
+++ b/RestaurantChapeau/Properties/Resources.resx
@@ -121,7 +121,13 @@
   <data name="chapeau" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\chapeau.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="table5" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\table5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="hat" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\hat.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="screenshotTable" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\screenshotTable.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
