--- a/RestaurantChapeau/Properties/Resources.resx
+++ b/RestaurantChapeau/Properties/Resources.resx
@@ -127,6 +127,9 @@
   <data name="screenshotTable" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\screenshotTable.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="SCRIPTBL" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SCRIPTBL.TTF;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
   <data name="table5" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\table5.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
