--- a/RestaurantChapeau/KitchenViewForm.resx
+++ b/RestaurantChapeau/KitchenViewForm.resx
@@ -416,4 +416,7 @@
         bhkszQN8x7FjlHcv8mLRYm7e3jYLBP4DiaYsl4/lygUAAAAASUVORK5CYII=
 </value>
   </data>
+  <metadata name="timer1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
