changed design for table view

--- a/RestaurantChapeau/TableViewForm.resx
+++ b/RestaurantChapeau/TableViewForm.resx
@@ -57,4 +57,127 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pb_TableAgenda.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAARYAAADACAYAAADBXUzJAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAS
+        cQAAEnEB89x6jgAAGyNJREFUeF7tnT2sZdV5hiliicQgYctYQGTNWMlICSLMEAUcYcEdmUQRRGJuiiC5
+        wDNC7oiAwkUCseiGJhKySJdEkM4KKFOkAFmWaGhCQxm5onVHm+6E58x8N+98Wmvtn7P2PufMvI/06d67
+        f9bv973rZ+97zj0bY4zpjIXFGNMdC4sxpjsWFmNMdywsxpjuWFiMMd2xsBhjumNhMcZ0x8JijOmOhcUY
+        0x0LizGmOxYWY0x3LCzGmO5YWIwx3bGwGGO6Y2ExxnTHwmKM6Y6FxRjTHQuLMaY7FhZjTHcsLMaY7lhY
+        jDHdsbAYY7pjYTHGdMfCYozpjoXFGNMdC4sxpjsWFmNMdywsxpjuWFiMMd05KGH54osvNu++++7m9ddf
+        35yenm4uX758ZteuXdue+/TTT29dbYw5VPYuLF999dXm7bff3jzwwAObe+65Z5Rx7dWrVy0yxhwoexMW
+        BAVxUMF44oknNq+99trmnXfe2Xz44Ye32Xvvvbc99/zzz28eeuihs3uYzXz55Ze3UjXGHAJ7EZb333//
+        bIZy3333bV555ZXNxx9/vPnss89G25tvvnmbwDDrMcYcBqsLC/snIQZzBCWbCszFixc9ezHmAFhVWGLp
+        gxAwaykJxRxjqcQyirTPnz9vcTEHBw8m8Pm7xTdXExaWKiEqCEFJIHa1F1544Wzmwh5OD0iHJ1JhU9Kd
+        e5+5s0BM9OHEvh86IHDhlzdu3Lh1tC+rCAsVWVpUwmLmwpKrBzhFOMTUdPW+JUcqRIv0MQvY4RH+H7bv
+        /UB9aLJUWRYXFpz93Llz20r0XP7U7JNPPjnbc+kxMmRhmZKu3rOksKijMAqZw0JjgJnLkr4whjtCWKIS
+        bNSWhGAJ49E0ebLfsislYcE5xswM9B4Ly90N/c+AdAgzyqMXlgjKNZZA2WJJtOuspSQs2JUrV25dUUev
+        t7CYQ+HohSXWlrzUVgr+JS1mLScnJ7dKM4+asGD8i0ELvXaMsCCCtBnGphpPElpwnnuoY+SD4HEsbBcY
+        XaM8GOnNGXHjiYimMwXy5J64n7YZas9oG6x1LefiutzekW9YUGqXITSdoTbkPHXU9IfuyeQyahscvbDw
+        ViyFp2Kl4F/aePmO/Kd2ikKHRCdg2ilD62W9r3UdAqVPDdRYztF+JWLdXrO5S0HKGn1XMtqgVZ+AgKil
+        06qX0mqbS5cuVcuh+bbyIbDiujzbo/xxLtqyVh7Oc30NvbZWZvyUtq3Vd0y7kwaDS+3+yCOOHaWwUHCW
+        QaWgX8OYKVGGVocPQUdGJ2D8rTOE1owo31dCO7llJQdYQlgYtWuOrUbaLSfXgG1Z6ylbS9zUSsKxhLCQ
+        Tvxds1peek2p3Tg21J9Yq93HpIG/HbWw4KAU/JlnnikG/Rr21ltvbcswtGRpQWdFJ2D8jWnw1dLP92X0
+        LWSMDo8lED9VwDCOKTg+piMU98TxPLUfItcLJ6ZupEN6OKGe532hEjkAKRPHolxZTEvtV2sb7ictDSDK
+        lNu3t7CQB3nyk3uiLJR9qCwQ57HSeU0j2p3raPtc31q7ZyGutZn24dEJS3TKSy+9VAz6NYx/ZqQMu7zT
+        QudGJ2DhFHR8HKOjSkFcui/I6dY6WAOMfErLOg3UXTZvNR2cu5QX9RxyTA2C2iZ3rpeS26YkPJSNAItr
+        ch/3FhaMcuZ+BI5pnWnHjKaT06B8ca42I8l55DohIHEOG9Nm2NEJSzTWmo+Zs8UG7i7BRodqR2in60yh
+        NIrU7gMN4tZyCmfQQC4FSQ9hyfUkqGpoMLLPoYwJEsj10uu0PqUgDTTwyUtZQlhaA5TWm3plUdZ0cpuo
+        YNTaC7Q82WfUF2tiDgwMcR1mYZlhSwsLzqNOkR2vdh8QkHGu5figo3upLj2ERUe8HKQZ6h3XYlq3saLQ
+        QtuUcs1hCWFpBX0WyizMtXQ00LNIZ7TdyUvRvIfaTH3v6IQlOmUfj5rDYim0S+PhBNEJWHau7HzqUHo8
+        36fnSssoRUfDkvP1EBYNsNaIF9SCf2xA18iixd9z6C0sOZBLtAaLOI6pL6igkwdlaJmmE22T22zIn9Rf
+        jk5YIiB5Ua0U9GsYsyXKMMfBgyFhAZ1R6N5E7b6c5lDwDM0megiLptGa8ge1IFLByaP2GHLbzKW3sAzN
+        4kDzzAEbxzH1Bcqm56ZYpDO1zbTORycsgALzLgn/v1MK/KUt3r4dUvAWudPUKQKEobQkqt2X07xThWVo
+        Sl5iapDUOEZhIV7YOxlr4TdT/enohSWclb2OUuAvaR999NE27zEO0SJ3mjqFok6I5b/zfXpuSPj0CRQO
+        lekhLOpsY5ZCuqbXmYluIpaeTAxBUMT9WK29hxgrLK39q9yHQ6jYZlHVdLROOmiUlrlj0fSH/En76CiF
+        JTpmH8uheIeFoNuFscIC6qTZ8n0IRJwbCkB1hNJsooewqIMP7SfguHEtpiOktkFJBBXSwUcwTUNnPUNt
+        E/djyliBUwEaEpach5L9JAe3nlNf0Pto96HZRg1tsyGxmHLtXBYVFohKrD1refjhh7f5toRgDNlhhtLL
+        7wnU7tMZArOqmkPl/EvO3UNYyF9nIa1g1PyyeORgrI2euV5a/7Fto8uIPNq3yhjkMgwJS0soNb/SLFnT
+        yb4wdpDhPvLhmuwHKuhj2ww7WmGJkXDNWUts2tIJu5KdLztFhvMaoLX7ciCXyso9OrrUlnUaiAhbzamG
+        0HQoW0kU9BqstMzQQKHMpbqrAOeAndM2OSD5O85hlFvbhcDU+7EhYcFKgTgmWPV8bg+9n3pn0YDcZrlN
+        cllLbUZ/5jqXytqDxYUFwtHWeAs33l0pOfQcSEM7Ykya2alr9+XrKDMjD53NTw0ufq/lnZ2KdJjil5ZN
+        LXDe7Hh8cRzlwXTZgNXSx4G17BiOXqoXVhKwVtsgAJpGTbxyPvxNHfQ45YrfW8LCPRHYURYstwnnVMAC
+        vabUjyrGGOlSV9ohtxm/l9LgOk1D20zLefR7LAGNEA7LdwOVBKGHsWEbS6DSSDoHyh6dgJU6tER2lNp9
+        dKxeVzIcqbakCDRAwnCsqWhftaw0Iiql0bFkrX4a0zYlUQlKMw418tY8WsIS+bTq1CqLXle6BjHSgK/Z
+        kC9kcclGfbXO/L4EqwgL6Ci2xNu4H3zwwZmo9GyscKawmuNkuI4Rbsx9nCNQdVTC+Ju6lEbAEgSKTpfJ
+        d+y9mZxWGIJJwI0h6kU5NA3qxfExbblr2+T7+al1YEYQfURQKllYgPTyoDGmLJEH1qo37Z7TH5tHUOo7
+        /o4nVVpnfl+C1YQFVFxYFvV6v4VZ0P33379Nt6eo7AOcLuwQwJGjPHNFCjSdufQoxxRKwhL0qM8Qu9Z3
+        jTLWWFVYgEqilHQWMwweC5fEYoyxnxIvwSFYS6mvuTtpCYtps7qwAOLC9DQ6DYFhGsoeSUlA1JjlIEYh
+        KBhTx32osrmzsbDMZy/CEmSBwRAZPhyKpRJ7MRi/88+MFy5cuO1aBIX1pDFLYGGZz16FJUBgWMaUNq2y
+        sYxidkOnG7MkFpb5HISwZNjkpVOZjWDsZnNsrU07YwCfi6cnDHpmPAcpLMaY48bCYozpjoXFGNMdC4sx
+        pjsWFmNMdywsxpjuWFiMMd2xsBhjumNhMcZ0x8JijOmOhcUY0x0LizGmOxYWY0x3LCzGmO5YWIwx3bGw
+        GGO6Y2ExxnTHwmKM6Y6FxRjTHQuLMaY7FhZjTHcOTlj4ZHQ+mZ+vSlXj60H45H5/Ur8xh89BCAuCcXp6
+        eva9zkN2+fLlrfj42w+NOUz2KiyIQ3yPM/Y737x/850f/Gjz/R+/uvnj169vHn/rvc2fXv/37c8LP/37
+        7bl7v/vI2fUIEV9eZoEx5rDYi7AgBMw6zgTisSe3AvLcf/3PKHvqF/+5eehHp2ciw7fUIVLGmMNgdWFB
+        AGLJg6AgEiXxGGNP/+uvN9978eUzgWIvxhizf1YVFgI/RODCT/+hKBZzDIGJ2QtfMm+OGzbwvbw9blYT
+        Fp7qEPjso+wyS6nZ2uLC0ynqxB7PtWvXtoZw8j3TZj60Zww+tO8+oY+ZYYeZ8awiLIw+4SxLiEqYistS
+        Tpn3h0rGno+XZfPI7bhP1G8xM55VWiue/PRc/tQMcWFWRH69p9O6PzTGCAxP6adxcnJy1n77XtZaWOaz
+        eGsRjHTKQ8+dFoVgCePRNHnipL1giaNOFukzM+IcxixFH59jiItf6hsPwUybYvtuNwvLfBZvrQi0p//t
+        10URWMp44kS+vHy3KziYCgZi0UpXN6mxK1eu3DpjjgkLy3wWba19zFbCeKmOvNlU3RWm5OFcLIVwuCGy
+        uIwVOEZpnors8u8LlI/7SWffo36P+rQgTa3vHGpltLDMZ9HWYqSmQ6a8/NbLTn7539u9FoRgF3A0da4p
+        m8K6XzC0LCPdS5cu3ZYXxrExTyQoJ2JW2gNis7kWdCH+WKuMQ0GmM7oIUJ7w5PLEv2PUUBFvbYBTH9LK
+        6TObJI0x4k85Sxvxcb+FZT6LthadTnCXAn8Ne/jrmRIOgQPNRfdWpoqUBi336mgYcGzoKRN28eLF4v1A
+        kOW9nZKVAnUpYaG8en22mmiMERZEWNMqGQLTmsEMpRH36zEznsVaKzrlW489WQz6NSw2cafMMjL6XsXU
+        vRKEIO7FSo6eAzA2hLGY8YWV8ifgNagRMMrM/QRmFpzcFksIC+nwM8pCORCMXJbSOz9DwqLlxaK9OJ7r
+        S/6UO5ProuXUNHL7m/Es1lqMWnTG9178STHo17DYZ8Fp5qKziZKjD6GOjvMrOUjyecjX5NmXBiKjbCmQ
+        VBwJIkXT7yUsGEGZZ1ikoUJKWfI1LWHhWs2n1B9cE8KGkV5G0xjTZmFmPIu1Vjgs/6lcCvo1jL0dyrDL
+        Bq4KSynwh9D782xhKEgCHTn1uhzspQABgo0gjut05rSEsNSCFTiuZcmzlpawaFlLghHk+qp4xYAXVisn
+        ZLE047GwDKDOtauwaKDk9XvLwQkMzmMaJAhV3N8SBailsYSwtIIedEaR+6YlLNqWQ/tmmo6Kl7YZG+Mt
+        yD+uxcx4Fmut2PTc51IohKXXUijPOMZQu183hYccvEZtJjOFJYSltHeitASxJSw6CyENyl4zFS9td01/
+        yC/y7MaMZ7HWCkf8zg+eKwb9GtZj81aDd45A1ab9Ohq2ArqFihbBNAfuG1OOKcIyNJvQPFk2KS1hieNT
+        TdOpzSBLDNXZ1Fm0tQiqfT5ufvBrUcMhhhy9hW7iTRWA7Ji6t6HCgnjN4ViFRWdr+xSWoQHHwjKfRVsr
+        pqP7eEEO6/GCXJ4O6/7EEK2RWc/daUuhIZHrsRSiPHPwUmgdFm2tcFpeVCsF/pL26OvXt3njSLuiDj02
+        PRy/taGpm7ekP0WwAp31TJ1NBS3xU4aCTOs6FLAa3Hm2pueysOibyUP7ODWmtJkKIGbGs2hrESyxHPrh
+        yv+EeO93f3/rDLssg4LsYEMjMuhsAiuNsCpYrRmHBpsGbQ721iheW6qMfTqlZcAymn5LKElf08lt2RKW
+        KaKA8FDPXI7cZi3/0DphZjyLt1Y4w5qbuDFbmTuKl8hvyFKvUhDiqLqOj2tLaKAQjKX0cuDnQKCOca72
+        2r/mk2clXB/namno/WGZHIQIRIZ0VXApS86rJSy5rLU9kiGx1LKOabMwM57FW4tOi4589I3rRSHoaT9c
+        6IOeSCsHD4aI8C4GplP1sNayQNsmjMBCPBhxcW6d1ZSEMo/ABCsBx3FmA2NETsUJIw2+54k6Rf75mkwO
+        Vn5GWagLP0vinGkJC+TZI9fH7CTaLJ/PcJ1eo+XUNsvlNeNZpbViBCHgn/rFjaIg9DBEJZZAJafclZq4
+        1GxorwHGponz14RS90laVgoyGCoDeWcBy+j9BOhQnWptMyQswL2aVs1qsxHIApRtTJ1NndVaK0aapcQF
+        Ubnv+3+0zaMWQL0gkPNoFsYIz+iOU46FwNaAyukRBLUACUgjzyo0Ddq/Re1+jnEO0+MZFRLqzvV5nwkb
+        KssYYQH6oCZeY9uslsbYOps6q7aWjhI9P/+WD+iOmcrSoqLguAQRDooxMxty5hY5PX6fmh7BkMs0hbh/
+        at5ZWALyjyXG1LKMQdOfmwflXbKMdyOry7CukXkMvcvTopNffr79X6RIb8zSwyxDTVjM3cle5neMiuqI
+        CMyUl+gQIwQlNmnHTPXNslhYjLLXhSNTT3VIljMP/vlzW9F4/K1/3ooNxu/838/Dz/3N2ZIHG7uWNstj
+        YTHKQexIITCljb6asbnGDMWCcjhYWIxyEMKi4JQIDTMR9kzYjOV3hIRzFpPDxMJilIMTFnOcxONZzOJv
+        LCzGmO5YWIwx3bGwGGO6Y2ExxnTHwmKM6Y6FxRjTHQuLMaY7FhZjTHcsLMaY7lhYjDHdsbAYY7pjYTHG
+        dMfCYozpjoXFGNMdC4sxpjsWFmNMdywsxpjuWFiMMd2xsBhjumNhMcZ05yCFJb7mk0/rx/jdX31pzPFw
+        EMLCp7rz9R6XL1/efglZfI1EyS5durT9WhALjTGHy16FhZkIYqLC8cC939i8+Ngjm5efPL/5x796dGt/
+        9+yF7bHHH7lddBAZZjTGmMNiL8LCDIVZh4oJAvKbn7+w+d93/7ZpXPMvP/6zzbN/8OBtAsPyyRhzGKwu
+        LAhAfGveuW9982uReLIoIGPsV6+efJ3G790UJ38xvDEHw6rCwr5I7KGwvPnt9dOiYEw1Zjsxe+HrWI0x
+        +2U1YVFRQQhKArGLff6zvzibvfQWl/jq0JaZOweW6u7b3VhFWOicWP4sISph7L888Lvf2ObT64vJKTvp
+        jTE2or2ZfPzgO9Gn58+fv3XUTGEVYbl69eq2k5YUlTD2XciL2VGPLyefIixhJycn/mL0I8bCsjuLCwsj
+        OB3ERm1JCJYw9m/IkydPu5KF5cqVK1uhVENI8vs3HDPHiYVldxYXllgCff6zvyyKwBL22+tXzpZEu66R
+        s7DU0uO4PkLHei3HzLpYWHZnUWGJDuKdk5IALGnxpGjXjdyxwhIwU4lrr127duuoOSYsLLuzqLDE3sou
+        76rMtZi1sETZhanCwrs0cW3LKWOGwzVxPS/60WZDeUDt3yCmpME1CG+pDK3ZFk/4yBd74403tse4Xt+i
+        jk1sfsa1pNuC8sS1WKkO1Jsycz7qzU/+HrtxHmnkesf9FpbdWVRYYhlUCvw1LN7O3eX/inDucDJsKGBj
+        TwmrOaWKT81aMy3KEG1bM/Ju1Zsy5H2hbLU9Kg08Zmha57BSkGKtTW1tFwI9Q33G1LvVR0NphKjG3xaW
+        eSwmLDgQHbOPZVDYP51e3JZh7EhWYqqwDAUHgqHpEdw4M3bx4s3yhtUCWwMj7iddrs/nSoGchU3LoEs5
+        jGMZDTzqGHmSDr/zU9ucv+N68q5BWnFd7jPaXdNplRkxKNW7JMi0eU6DDfr43cIyj8WEJZyPfyYsBf0a
+        xv8UUYZagI5hqrAwJY9rcVAlp1WaleSgpx0VnR2URmcCSgUq58H1GqCltrlx48Zt1+QyqLCEkU9tNqJi
+        SgCXGGpnFQTaNefF9XpNqW0RkDhP/XK9SCOLu4VlHosJC85Jx6zx7krNfvXqzSDfZRN1yOEDHJ0g1Wvz
+        qKuOXXL8oBWIeq5WL6b7lIX8c3m1DPxeQwUulyELS6suQHn0+pIAtfLLYlpD80E4NJ/cj7lvAq5TUbWw
+        zGMxYQlnuNOE5fT0dJueGsfUGbGSQ+o1NYECAiKu4x5FhYXRtRSkLXRUb5UBtLyaTxaWMehSo7Qcai2D
+        dGlSE4RA89EZiQrXkFjoAGFhmcfiMxZeVisF/RoWwtJzKTTGCPgctDqa4qycb1lNAHJQkxZBk6f1JbJg
+        5TyzabBT/kDLMDbwWjMS8opzWBZLFTjyzuVUq4mQztSG/CF8F7OwzGMxYYlA4gOaSkG/hsXmbWmEHAvO
+        Gk42xmp5ZUGYYhrUoLMWNQKQPR7KQLkzu5RBhWuOsGRRU/FQ0Sktz+LcVNMlmu59DfmD9rmFZR6LCUs4
+        0rlvr/cqf7aXn7w56mtQTCULC2lxLExnIlhtvyGWhnOsVH7Sy084suWyqCBMNS2DpjMl8HSZorMJDfpS
+        XePcVKsJy9ByysKyO4sJC4Qjrfk6v9q5b9/8GIU8tZ5CFhb+zuiaPI/GgQYjS4wQpjHWKj/nCRRG+vxE
+        A9PReepyTE3LMFdYdIkRyyHSHkorzmPknctWMy2zLpFq4h/MrZ/5fxYVlpji7mMDN/ZX8np+KjhoOBnG
+        3xkcWPcBSo6r6XDtUpCPCowGBuWM41hLsFrMDTxtpxBgncnVnlLpzIy856DiP+QTWiYLyzwWFZZwJF6t
+        7/VpcWMtlkFD094hxggLICZD16n4DAVI3ldRaNfWeQ18TNHlyNwyzBUW0ACnb3SJUstP7xmabZBGSTBV
+        LELUamiZLCzzWFRYIAJuzVnLf7zydDenGCssIaJxXX45DlR8KFvNuXUzM6czZvTOQaTkMtTqo2mwdNOy
+        7iIsem9tZpXRe6hPTYCoS/QB6el1uX9qsyNt+0jHTGdxYdEOXWOvhZlR7K3sOluBscICedaSA5+2UGHA
+        aSljBC1p5zT4W9HRO+4PSIc8NY8cQENl4Cd5ahCSp7KLsICmHTbUV7pHwv1cH31RqnepXLltaRvuIx1t
+        ey3fnPqZFYQFcAI6iSdEY77iYxfj8XY4TQ9wuHAyLJy5RA7a0lqeUVSvaRkjeibnEUYAlI6VysuxKWUI
+        0Ql2FZYc4FirXYEylDanS1arN+hSsGa71s+sJCwQI+2S4hL7KjhDDoa54KDhZNhQAISIhuGkGdLQETgb
+        I2aeqSjcj3CW7g0j/VYbjEmDPiulsWvg6f3Y2A12yqIztpKR1lAf1dLQmVAcs7DMYzVhgXDk3uLC8ufZ
+        P7z5EQmt0WoOODOBEDYGvb5VFs6xpsfRaRt+4thjRXHX+2FOGtomtf2OIca2UQmup4yIb5SZOkxJR+sd
+        90ede9TvbmdVYQGdBvfY0OWxcuypMFWe6qTGmP6sLizA6BBrfGYvfMLc1BkMghKzFIxRZ8pIbYxZjr0I
+        CzCziKVR2It/8sj2/3sQjd/8/K/P3n3hd54oIUAvP3X+7IOyMdbUTFmNMYfD3oQlCIEZ+5QCY5PNgmLM
+        4bJ3YVEQCpZJCA3CocYxznGNlzzGHDYHJSzGmDsDC4sxpjsWFmNMdywsxpjuWFiMMd2xsBhjumNhMcZ0
+        x8JijOmOhcUY0x0LizGmOxYWY0x3LCzGmO5YWIwx3bGwGGO6Y2ExxnTHwmKM6Y6FxRjTHQuLMaYzm83/
+        Aea8RWUwudz3AAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
